fix: disable scrollbar

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,20 @@
 @import './styles/colors.scss';
 
+*, ::after, ::before {
+  box-sizing: border-box;
+}
+
+html {
+  overflow: scroll;
+  overflow-x: hidden;
+  scrollbar-width: none;
+  -webkit-overflow-scrolling: touch;
+}
+::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Verdana, Helvetica, Arial,
